--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "application-name",
+  "name": "Part-aye-feed",
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "node app.js"
   },
   "dependencies": {
     "express": "3.4.8",
