--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "express": "3.4.8",
+    "body-parser": "^1.13.2",
+    "errorhandler": "^1.4.1",
+    "express": "4.13.1",
     "jade": "*",
-    "node-sass": "*",
+    "method-override": "^2.3.4",
     "twilio": "*"
   }
 }
